fix(elements): accordion slot alignment

--- a/projects/elements/src/accordion/accordion-header.css
+++ b/projects/elements/src/accordion/accordion-header.css
@@ -10,6 +10,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  gap: var(--nve-ref-space-xs);
 
   ::slotted([slot='title']) {
     margin: 0;
@@ -34,5 +35,6 @@
     display: flex;
     flex-direction: row;
     gap: var(--nve-ref-space-xs);
+    margin-left: auto;
   }
 }
